--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "contentful": "^4.5.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "react-showdown": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
