--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   },
   "dependencies": {
     "contentful": "^4.5.0",
+    "gh-pages": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1",
     "react-showdown": "^1.6.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "http://maxharlynking.com/rosewood-farms"
 }
