--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "http://maxharlynking.com/rosewood-farms"
+  "homepage": "http://rosewoodfarms.org"
 }
