--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "gh-pages": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-parallax": "^1.4.4",
     "react-router-dom": "^4.1.1",
-    "react-showdown": "^1.6.0"
+    "react-showdown": "^1.6.0",
+    "react-waypoint": "^7.0.4"
   },
   "scripts": {
     "predeploy": "npm run build",
